# sistema_de_gestao_de_bibliotecas

./: .gitignore  README.md  pyproject.toml
account/: urls.py  views.py
account/templates/account/pages/: login.html
author/: forms.py  models.py  urls.py  views.py
author/migrations/: 0001_initial.py
author/templates/author/pages/: create_author.html
base/static/base/css/: style.css
base/static/base/js/: main.js
base/templates/base/pages/: base.html
base/templates/base/partials/: head_config.html  header_body.html  login.html  logout.html
book/: admin.py  forms.py  models.py  urls.py  views.py
book/migrations/: 0001_initial.py  0002_alter_book_isbn.py  0003_alter_book_isbn.py  0004_alter_book_status.py  0005_alter_book_status.py
book/templates/book/pages/: create_book.html  index.html
setup/: settings.py  urls.py
